--- a/SpringProject/src/main/resources/application.properties
+++ b/SpringProject/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 
 firebase.database.url = https://spacemonitoringsystem-default-rtdb.europe-west1.firebasedatabase.app/
 firebase.config.path = src/main/resources/serviceAccountKey.json
+logging.level.org.springframework.integration=DEBUG
+logging.level.org.springframework.integration.mqtt=DEBUG
