--- a/AngularProject/angular.json
+++ b/AngularProject/angular.json
@@ -44,6 +44,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                  {
+                    "replace": "src/env/env.ts",
+                    "with": "src/env/env.prod.ts"
+                  }
+                ],
               "budgets": [
                 {
                   "type": "initial",
@@ -81,6 +87,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
+        
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
