--- a/AngularProject/package.json
+++ b/AngularProject/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
+    "@angular/fire": "^19.1.0",
     "@angular/forms": "^19.1.0",
     "@angular/material": "^19.1.2",
     "@angular/platform-browser": "^19.1.0",
@@ -22,6 +23,7 @@
     "@angular/router": "^19.1.0",
     "@auth0/angular-jwt": "^5.2.0",
     "chart.js": "^4.4.9",
+    "firebase": "^11.6.1",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
