Twilio API, java doc, better errors handling

--- a/SpringProject/src/main/resources/application.properties
+++ b/SpringProject/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Application properties for Spring Boot project
 spring.application.name=SpringProject
 
 spring.jpa.hibernate.ddl-auto=none
@@ -32,5 +33,13 @@ spring.mail.username=${RMS_MAIL_USERNAME}
 spring.mail.password=${RMS_MAIL_PASSWORD}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+
+# Twilio configuration
+twilio.account-sid=${TWILIO_SSID}
+twilio.auth-token=${TWILIO_AUTH_TOKEN}
+twilio.phone-number=${TWILIO_PHONE_NUMBER}
+
+# Encryption key for phone numbers
+encryption.key=${ENCRYPTION_KEY}
 
 
