--- a/SpringProject/pom.xml
+++ b/SpringProject/pom.xml
@@ -101,7 +101,12 @@
             <artifactId>api-common</artifactId>
             <version>2.12.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>10.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
