--- a/AngularProject/package.json
+++ b/AngularProject/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
+    "jasmine-auto-spies": "^8.0.1",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
